Small Glitter fixes

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -220,7 +220,7 @@
                             <th></th>
                             <th class="table-header-extra" data-bind="css: { 'table-extra-header-visible' : extraColumn }"></th>
                             <th class="table-header-progress" data-bind="css: { 'table-header-progress-smaller' : extraColumn }"></th>
-                            <th style="width: 80px;"></th>
+                            <th style="width: 85px;"></th>
                             <th style="width: 60px;"></th>
                         </tr>
                     </thead>
@@ -275,7 +275,7 @@
                                     <span data-bind="text: progressText"></span>
                                 </div>
                             </td>
-                            <td class="timeleft" data-bind="text: timeLeft"></td>
+                            <td class="timeleft row-wrap-text" data-bind="text: timeLeft"></td>
                             <td class="delete">
                                 <label data-bind="visible: !isGrabbing() && parent.isMultiEditing()">
                                     <input type="checkbox" name="multiedit" title="$T('Glitter-multiSelect')" data-bind="click: parent.addMultiEdit, attr: { 'id': 'multiedit_' + id } " />
@@ -717,7 +717,7 @@
                 <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:bugs@sabnzbd.org?body=Version:%20$version%20Skin:%20Glitter">Email bugs@sabnzbd.org</a>
 
                 <h4>Interface (Glitter)</h4>
-                <span class="glyphicon glyphicon-home"></span> <a href="http://forums.sabnzbd.org/viewtopic.php?f=15&amp;p=93733" target="_blank">Glitter at SABnzbd Forum</a><br />
+                <span class="glyphicon glyphicon-home"></span> <a href="http://forums.sabnzbd.org/viewtopic.php?f=5&amp;t=18880" target="_blank">Glitter at SABnzbd Forum</a><br />
                 <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:safihre@sabnzbd.org?body=Version:%20$version">Email safihre@sabnzbd.org</a>
     		</div>
     	</div>
