--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -102,7 +102,7 @@
                                         </div>
                                         <div data-bind="visible: bandwithLimit()">
                                             <div class="max-speed-slider" data-bind="slider: speedLimit, sliderOptions: {min: 1, max: 100, range: 'min', step: 1}"></div>
-                                            <span data-bind="text: speedLimit() + '%'"></span> (<span data-bind="text: speedLimitText"></span>)
+                                            <span data-bind="text: speedLimitText">
                                         </div>
                                     </div>
                                 </div>
