--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -7,11 +7,11 @@
                 <h4 class="modal-title">$T('Glitter-statusInterfaceOptions')</h4>
             </div>
             <div class="modal-body">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li class="active"><a href="#options_status" role="tab" data-toggle="tab">$T('menu-cons')</a></li>
-                    <li><a href="#options_connections" role="tab" data-toggle="tab">$T('connections')</a></li>
-                    <li><a href="#options_orphans" role="tab" data-toggle="tab">$T('Glitter-orphanedJobs') <!-- ko if: hasStatusInfo() && statusInfo.status.folders().length > 0 --><span class="label label-warning" data-bind="text: statusInfo.status.folders().length"></span><!-- /ko --></a></li>
-                    <li><a href="#options_interface" role="tab" data-toggle="tab">$T('Glitter-interfaceOptions')</a></li>  
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#options_status" data-toggle="tab">$T('menu-cons')</a></li>
+                    <li><a href="#options_connections" data-toggle="tab">$T('connections')</a></li>
+                    <li><a href="#options_orphans" data-toggle="tab">$T('Glitter-orphanedJobs') <!-- ko if: hasStatusInfo() && statusInfo.status.folders().length > 0 --><span class="label label-warning" data-bind="text: statusInfo.status.folders().length"></span><!-- /ko --></a></li>
+                    <li><a href="#options_interface" data-toggle="tab">$T('Glitter-interfaceOptions')</a></li>  
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="options_status">
@@ -352,7 +352,7 @@
             <div class="modal-body">
                 <div id="modal_item_filelist">
 
-                    <form data-bind="submit: filelist.setNzbPassword" class="form-inline" role="form">
+                    <form data-bind="submit: filelist.setNzbPassword" class="form-inline">
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -378,7 +378,7 @@
                                 <tr data-bind="css: { 'files-sortable' : canChange() }">
                                     <td class="row-wrap-text">
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-info" role="progressbar" data-bind="attr: { 'style': 'width: '+percentage() }">
+                                            <div class="progress-bar progress-bar-info" data-bind="css: { 'progress-bar-info-checking': \$parent.filelist.modalProgressColor() }, attr: { 'style': 'width: '+percentage() }">
                                                 <input type="checkbox" data-bind="attr : { 'name' : nzf_id, disabled: !canChange()  }, click : checkSelectRange" title="$T('Glitter-multiSelect')" />
                                                 <strong data-bind="text: percentage"></strong>
                                                 <span>
