--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -227,7 +227,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <!--#if $active_lang in ('pl', 'es', 'ru', 'sr') #-->
+            <!--#if $active_lang in ('pl', 'es', 'ru', 'sr', 'fi') #-->
             <a class="navbar-brand navbar-brand-small" href="${root}"><img src="${root}staticcfg/images/logo-small.png" width="47" height="45" id="logo" alt="[home]" /></a>
             <!--#else#-->
             <a class="navbar-brand" href="${root}"><img src="${root}staticcfg/images/logo.png" width="120" height="45" id="logo" alt="[home]" /></a>
