Adding help-icons to config sections

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -8,7 +8,7 @@
     <input type="hidden" id="ajax" name="ajax" value=1 />
     <div class="section">
         <div class="col2">
-            <h3>$T('webServer')</h3>
+            <h3>$T('webServer') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p><b>$T('restartRequired')</b></p>
         </div><!-- /col2 -->
         <div class="col1">
@@ -116,7 +116,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('httpsSupport')</h3>
+            <h3>$T('httpsSupport') <a href="$helpuri$help_uri#toc1" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p><b>$T('restartRequired')</b></p>
         </div><!-- /col2 -->
         <div class="col1">
@@ -158,7 +158,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('tuning')</h3>
+            <h3>$T('tuning') <a href="$helpuri$help_uri#toc2" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
