--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -5,10 +5,10 @@
 <div class="colmask">
     <form action="saveEmail" method="post" name="fullform" class="fullform" autocomplete="off" novalidate>
     <input type="hidden" id="session" name="session" value="$session" />
-    <input type="hidden" id="ajax" name="ajax" value=1 />
+    <input type="hidden" id="ajax" name="ajax" value="1" />
     <div class="section" id="email">
         <div class="col2">
-            <h3>$T('cmenu-email')</h3>
+            <h3>$T('cmenu-email') <a href="$helpuri$help_uri#toc0" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -71,7 +71,7 @@
     </div><!-- /section -->
     <div class="section" id="growl">
         <div class="col2">
-            <h3>$T('growlSettings')</h3>
+            <h3>$T('growlSettings') <a href="$helpuri$help_uri#toc3" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -202,7 +202,7 @@
     <!--#if $have_ntfosd#-->
     <div class="section">
         <div class="col2">
-            <h3>$T('section-OSD')</h3>
+            <h3>$T('section-OSD') <a href="$helpuri$help_uri#toc4" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
