--- a/interfaces/Config/templates/config_scheduling.tmpl
+++ b/interfaces/Config/templates/config_scheduling.tmpl
@@ -15,7 +15,7 @@ else:
 <div class="colmask">
     <div class="section">
         <div class="col2">
-            <h3>$T('addSchedule')</h3>
+            <h3>$T('addSchedule') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <form action="addSchedule" method="post">
         <input type="hidden" id="session" name="session" value="$session" />
