--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -8,7 +8,7 @@
     <input id="complete_dir" type="hidden" value="$complete_dir" />
     <div class="section">
         <div class="col2">
-            <h3>$T('seriesSorting')</h3>
+            <h3>$T('seriesSorting') <a href="$helpuri$help_uri#toc0" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p>
                 <b>$T('affectedCat')</b><br/>
                 <select name="tv_cat" multiple="multiple" class="multiple_cats">
@@ -160,7 +160,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('movieSort')</h3>
+            <h3>$T('movieSort') <a href="$helpuri$help_uri#toc6" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p>
                 <b>$T('affectedCat')</b><br/>
                 <select name="movie_cat" multiple="multiple" class="multiple_cats">
@@ -299,7 +299,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('dateSorting')</h3>
+            <h3>$T('dateSorting') <a href="$helpuri$help_uri#toc9" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p>
                 <b>$T('affectedCat')</b><br/>
                 <select name="date_cat" multiple="multiple" class="multiple_cats">
