--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -7,7 +7,7 @@
     <input type="hidden" id="session" name="session" value="$session" />
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-general')</h3>
+            <h3>$T('swtag-general') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -38,7 +38,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-server')</h3>
+            <h3>$T('swtag-server') <a href="$helpuri$help_uri#toc1" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -74,7 +74,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-queue')</h3>
+            <h3>$T('swtag-queue') <a href="$helpuri$help_uri#toc2" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -165,7 +165,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-pp')</h3>
+            <h3>$T('swtag-pp') <a href="$helpuri$help_uri#toc3" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -285,7 +285,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-naming')</h3>
+            <h3>$T('swtag-naming') <a href="$helpuri$help_uri#toc4" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -327,7 +327,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-quota')</h3>
+            <h3>$T('swtag-quota') <a href="$helpuri$help_uri#toc5" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -364,7 +364,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('swtag-indexing')</h3>
+            <h3>$T('swtag-indexing') <a href="$helpuri$help_uri#toc6" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
