--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -8,7 +8,7 @@
     <input type="hidden" id="ajax" name="ajax" value="1" />
     <div class="section">
         <div class="col2">
-            <h3>$T('userFolders')</h3>
+            <h3>$T('userFolders') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p>$T('explain-folderConfig')</p>
         </div><!-- /col2 -->
         <div class="col1">
@@ -74,7 +74,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('systemFolders')</h3>
+            <h3>$T('systemFolders') <a href="$helpuri$help_uri#toc1" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <p>$T('explain-folderConfig')</p>
         </div><!-- /col2 -->
         <div class="col1">
