--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -12,7 +12,7 @@
     </div>
     <div class="section" id="addServerContent" style="display: none;">
         <div class="col2">
-            <h3>$T('addServer')</h3>
+            <h3>$T('addServer') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -130,7 +130,7 @@
 
     <div class="section">
         <div class="col2">
-            <h3>$server['displayname']</h3>
+            <h3>$server['displayname'] <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <span class="label label-primary">$T('srv-priority'): $server['priority']</span>
             <table><tr>
               <td><input type="checkbox" class="toggleServerCheckbox" id="enable_$server['host']" rel="$server['host']" name="q_enable" value="1" <!--#if int($server['enable']) != 0 then 'checked="checked"' else ""#--> /></td>
