--- a/interfaces/Config/templates/config_special.tmpl
+++ b/interfaces/Config/templates/config_special.tmpl
@@ -10,7 +10,7 @@
     </div>
     <div class="section">
         <div class="col2">
-            <h3>$T('sptag-boolean')</h3>
+            <h3>$T('sptag-boolean') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
@@ -35,7 +35,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('sptag-entries')</h3>
+            <h3>$T('sptag-entries') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
